# test_package_py

./: README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
test_package_py/: __init__.py  message.py  test_module_1.py
tests/: test_module.py
